# wasp

./: .clang_complete  .gitmodules  CMakeLists.txt  model_format  press.py  todo
CMake/Modules/: FindCg.cmake
CMake/Toolchains/: w32-mingw.cmake  w64-mingw.cmake
data/effects/: blue.cgfx  global.cgh  passthrough.cgfx  phong.cgfx  scene.cgfx  simplex.cgfx
effects/: blue.cgfx  global.cgh  phong.cgfx  scene.cgfx
model_compiler/: CMakeLists.txt
model_compiler/src/: compiler.cpp  compiler.hpp  main.cpp  output_stream-inl.hpp  output_stream.cpp  output_stream.hpp
shaders/: red.cgfx
src/: attribute_indices.hpp  camera.cpp  camera.hpp  camera_manager.cpp  camera_manager.hpp  cg_context.cpp  cg_context.hpp  effect.cpp  effect.hpp  effect_manager.cpp  effect_manager.hpp  fly_camera.cpp  fly_camera.hpp  input.cpp  input.hpp  input_stream-inl.hpp  input_stream.cpp  input_stream.hpp  jfx_context.cpp  jfx_context.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  quad.cpp  quad.hpp  render_target.cpp  render_target.hpp  renderable.cpp  renderable.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shader_buffer-inl.hpp  shader_buffer.cpp  shader_buffer.hpp  shader_camera_buffer.cpp  shader_camera_buffer.hpp  (+10 more)
